# Intellibin

./: .gitignore
classifier/: WasteNet.html  WasteNet.ipynb  data.py  model.py  run.py  u2net.py  webserver.py
components/esp32-vl53l0x/: CMakeLists.txt
esp32cam/: CMakeLists.txt  sdkconfig  sdkconfig.old
esp32cam/main/: CMakeLists.txt  app_main.c  app_main.cpp  esp_now.c  espnow_example.h  http_request.c  take_picture.c  tof.c  uart.c  vl53l0x.c  wifi.c
esp32cam/main/include/: project.h
esp32feather/: CMakeLists.txt
esp32feather/main/: CMakeLists.txt  app_main.c  lcd.c  motor.c  project.h  thinkspeak.c  uart.c  uart_events_example_main.c  vl53l0x.c
esp32feather/main/include/: project.h
